@@ -2,6 +2,9 @@ python-apt (0.7.7.2) UNRELEASED; urgency=low
 
   * python/cache.cc:
     - fix crash if Ver.PriorityType() returns NULL 
+    - fix GetCandidateVer() reporting incorrect versions after
+      SetCandidateVer() was used. Thanks to Julian Andres Klode for
+      the test-case (LP: #237372)
   * apt/cache.py:
     - support "in" in apt.Cache() (LP: #251587)
 
